<resources>
    <string name="app_name">GadgeothekApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Gadge-o-Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">E-Mail</string>
    <string name="name">Benutzername</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_matrikelnummer">Matrikel-Nr.</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">Gadge-o-App</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_gadge">GadgeActivity</string>
    <!-- String related to Main view Drawer Menu-->
    <string name="gadgets">Gadgets</string>
    <string name="ausleihen">Ausleihen</string>
    <string name="reservationen">Reservationen</string>
    <string name="bibliothek">Bibliothek</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
